# clobs

./: .gitignore  Cargo.toml  README.md
src/: events.rs  inputs.rs  lib.rs  main.rs  metrics.rs  msgpack.rs  orderbook.rs  outputs.rs  persist.rs  routes.rs
src/engine/: engine_registry.rs  mod.rs
src/kafka_worker/: consumer.rs  mod.rs  producer.rs
src/matching_loop/: mod.rs
src/persist/: client.rs  event.rs  mod.rs  worker.rs
src/worker/: ws.rs
tests/: stress_test.rs
