[package]
name = "orderbooks"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.11.0"
actix-web-actors = "4.3.1"
chrono = "0.4.41"
scylla = "0.7"
tokio = { version = "1.47.1", features = ["full"] }
rdkafka = { version = "0.36", features = ["tokio", "cmake-build"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
