[package]
name = "orderbooks"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.11.0"
actix-web-actors = "4.3.1"
chrono = "0.4.41"
scylla = "0.7"
tokio = { version = "1.47.1", features = ["full"] }
rdkafka = { version = "0.36", features = ["tokio", "cmake-build"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prometheus = "0.14.0"
lazy_static = "1.5.0"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
rand_chacha = "0.9.0"
ringbuf = "0.4.8"
rmp-serde = "1.1"
bytes = "1.10.1"
futures = "0.3.31"
wincode = "0.1.2"
wincode-derive = "0.1.1"
sysinfo = "0.37.2"
parking_lot = "0.12.5"
